# concordium-node

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  README.md  VARIABLES.md  deny.toml  fourmolu.yaml  grpc-for-smart-contracts.md  hie.yaml  rust-toolchain.toml  shell.nix  stack.static.yaml  stack.yaml
collector/: Cargo.toml  README.md  build.rs  collector.rs
collector-backend/: Cargo.toml  Dockerfile  README.md
collector-backend/src/: lib.rs
concordium-consensus/: .diff-wat-wasm.sh  .dir-locals.el  .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  ChangeLog.md  Environment.md  HaskellRust.md  README.md  Setup.hs  build  build-deps.sh  build.rs  clean.sh  hie.yaml  lib.def  package.yaml  setup-env.sh  shell-stack.nix  stack  stack.integer-simple.yaml  stack.static.yaml  stack.yaml
concordium-consensus/RustRunner/: Cargo.toml  build.rs
concordium-consensus/benchmark/: ConsensusBench.hs
concordium-consensus/haskell-bench/: LRUCache.hs
concordium-consensus/server/: Main.hs
concordium-consensus/src/: block.rs  common.rs  consensus.rs  fails.rs  ffi.rs  finalization.rs  lib.rs  parameters.rs  transaction.rs  transferlog.rs  tree.rs
concordium-consensus/startup/: Main.hs
concordium-consensus/testdata/: README.md  anonymity_revokers.json  credential-1.json  credential-10.json  credential-11.json  credential-12.json  credential-13.json  credential-14.json  credential-15.json  credential-16.json  credential-2.json  credential-3.json  credential-4.json  credential-5.json  credential-6.json  credential-7.json  credential-8.json  credential-9.json  credential-private-keys-1.json  credential-private-keys-10.json  credential-private-keys-11.json  credential-private-keys-12.json  credential-private-keys-13.json  credential-private-keys-2.json  credential-private-keys-3.json  credential-private-keys-4.json  credential-private-keys-5.json  credential-private-keys-6.json  credential-private-keys-7.json  credential-private-keys-8.json  credential-private-keys-9.json  credential.json  global.json  identity-providers.json  identity_providers.json  initial-credential-1.json  initial-credential-2.json  initial-credential-3.json  initial-credential-4.json
concordium-node/: .dockerignore  .envrc  1  BUILD.md  CONSENSUS_VERSION  Cargo.toml  Cargo.toml.win  Dockerfile  README.md  build-all-docker.sh  build-testnet-develop-release.sh  build-testnet-production-release.sh  build.rs  concordium.test.key  default.nix  deny.toml  docker-compose.debug-sc.yml  docker-compose.debug.yml  docker-compose.develop.middleware.yml  docker-compose.develop.wallet-dev.yml  docker-compose.develop.yml  docker-compose.middleware.yml  docker-compose.wallet-dev.yml  docker-compose.yml  macos_log_wrapper.c  rust-toolchain  rustfmt.toml  shell-tmp.nix  shell.nix
concordium-node/.config/: nextest.toml
concordium-node/benches/: p2p_lib_benchmark.rs
concordium-node/concordium-common/: Cargo.toml
concordium-node/concordium-dns/: Cargo.toml
concordium-node/concordium-global-state/: Cargo.toml  LICENSE  rustfmt.toml
concordium-node/concordium-global-state-sys/: Cargo.toml  rustfmt.toml
concordium-node/consensus-sys/: Cargo.toml  Cargo.toml.win  build.rs  build.rs.win  rustfmt.toml  stack.yaml
concordium-node/crypto-sys/: Cargo.toml  build.rs
concordium-node/dht/: Cargo.toml
concordium-node/dns/: Cargo.toml  build.rs
concordium-node/docs/: SetupKubernetes.md  local.md
concordium-node/examples/: mio_test.rs  p2p_node_1.rs  p2p_node_2.rs  p2p_sample.rs  test.rs
concordium-node/grpc-rs-0.4.0/: Cargo.toml
concordium-node/jenkinsfiles/: develop.Jenkinsfile  docker-compose-debug_sc.Jenkinsfile  docker-compose-develop.Jenkinsfile  docker-compose.Jenkinsfile  master.Jenkinsfile  opentestnet.Jenkinsfile  stagingnet.Jenkinsfile  static-libraries.Jenkinsfile
concordium-node/ldns-sys/: Cargo.toml  build.rs
concordium-node/net/: Cargo.toml
concordium-node/scripts/: .bootstrapper.Dockerfile.un~  .gitignore  CMakeLists.txt  CONSENSUS_VERSION  CXXFeatureCheck.cmake  Dockerfile  GENESIS_DATA_VERSION  LetsEncryptIssuer.yaml  Windows.Dockerfile  WindowsBuildEnv.Dockerfile  base-haskell.Dockerfile  base-rust-fmt.Dockerfile  base.Dockerfile  basic-deploy.yaml  basic.Dockerfile  beta-client.Dockerfile  beta-client.sh  bootstrapper-deploy.yaml  bootstrapper.Dockerfile  build-all-docker.sh  build-and-push-opentestnet-client.sh  build-and-push-staging-client.sh  build-and-push-static-libs.sh  build-base-docker.sh  build-base-haskell-docker.sh  build-base-rust-fmt-docker.sh  build-basic-docker.sh  build-binaries.sh  build-bootstrapper-docker.sh  build-build-docker.sh  build-client-docker.sh  build-collector-backend-docker.sh  build-collector-docker.sh  build-docker-compose-image.sh  build-ipdiscovery-docker.sh  build-linux-no-docker.sh  build-local.sh  build-static-libraries-copy-out.sh  build-static-libraries.sh  build-testrunner-docker.sh  (+64 more)
concordium-node/src/: common.rs  configuration.rs  connection.rs  db.rs  dumper.rs  errors.rs  fails.rs  ffi.rs  flatbuffers_shim.rs  grpc2.rs  health.rs  lib.rs  macos_log.rs  main.rs  p2p.capnp  p2p.rs  p2p_capnp.rs  p2p_old.rs  prometheus_exporter.rs  rpc.rs  schema_generated.rs  stats_engine.rs  stats_export_service.rs  test_utils.rs  utils.rs
concordium-node/tests/: address_sanitizer.rs  consensus_tests.rs  e2e_tests.rs  resolv.conf-linux  rpc_tests.rs  snow.rs  test_ph.rs
deployment/: Cargo.toml  rust-toolchain.toml
deployment/src/: lib.rs
deployment/tests/: host_stub.rs
macos_logger_wrapper/: Cargo.toml  build.rs  macos_log_wrapper.c
macos_logger_wrapper/src/: lib.rs
plt/: Cargo.toml  README.md
plt-deployment-unit/: Cargo.toml  README.md  rust-toolchain.toml
plt-deployment-unit/src/: lib.rs  token_module.rs
plt-deployment-unit/tests/: host_stub.rs  token_module.rs
plt-scheduler/: Cargo.toml  README.md
plt-scheduler/src/: block_state.rs  ffi.rs  lib.rs
plt/docs/: component_view.md  migrate_p11.md  system_architecture.md
plt/node-rust-library/: Cargo.toml
plt/plt-block-state/: Cargo.toml
(+1422 files in other folders)
