[package]
name = "collector"
version = "1.0.0"
edition = "2021"

[dependencies]
collector-backend = { version = "*", path = "../collector-backend/"}

anyhow = "1.0"
chrono = "0.4"
env_logger = "0.8.3"
futures = "0.3"
hex = "0.4"
log = "0.4"
prost = "0.11"
reqwest = { version = "0.11", features = ["native-tls-vendored"] }
rmp-serde = "0.15"
structopt = "0.3"
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.8", features = ["tls"] }

[target.'cfg(target_os = "macos")'.dependencies]
macos_logger_wrapper = { version = "*", path = "../macos_logger_wrapper/"}

[build-dependencies]
tonic-build = { version = "0.8", default-features = false, features = ["transport", "prost"] }

[[bin]]
name = "node-collector"
path = "src/bin/collector.rs"
