[package]
name = "concordium-consensus"
version = "0.0.1"
description = "consensus prototype wrapper"
authors = ["Concordium AG <info@concordium.com>"]
exclude = [".gitignore", ".gitlab-ci.yml", "test/**/*"]
publish = false
build = "build.rs"
edition = "2018"
license = "MIT"

[features]
default = []
valgrind = []
static = []
profiling = ["static"]

[dependencies]
concordium-common = { path = "../concordium-common" }
concordium-global-state = { path = "../concordium-global-state" }
# curve_arithmetic = { path = "../deps/internal/consensus/crypto/rust-src/curve_arithmetic" }
dodis_yampolskiy_prf = { path = "../deps/internal/consensus/crypto/rust-src/dodis_yampolskiy_prf" }
ec_vrf_ed25519_sha256 = { path = "../deps/internal/consensus/crypto/rust-src/ec_vrf_ed25519_sha256" }
eddsa_ed25519 = { path = "../deps/internal/consensus/crypto/rust-src/eddsa_ed25519" }
elgamal = { path = "../deps/internal/consensus/crypto/rust-src/elgamal" }
pedersen_scheme = { path = "../deps/internal/consensus/crypto/rust-src/pedersen_scheme" }
ps_sig = { path = "../deps/internal/consensus/crypto/rust-src/ps_sig" }
sha_2 = { path = "../deps/internal/consensus/crypto/rust-src/sha_2" }
libc = "0.2"
log = "0.4"
lazy_static = "^1.2"
byteorder = "^1.3.2"
failure = "^0.1.5"

[build-dependencies]
walkdir = "2"

[lib]
crate_type = ["rlib"]
