[package]
name = "concordium_node"
version = "1.0.2" # must be kept in sync with 'is_compatible_version' in 'src/configuration.rs'
description = "Concordium Node"
authors = ["Concordium <developers@concordium.com>"]
exclude = [".gitignore", ".gitlab-ci.yml", "test/**/*","**/**/.gitignore","**/**/.gitlab-ci.yml"]
publish = false
build = "build.rs"
autobins = false
edition = "2018"
default-run = "concordium-node"
license-file = "../LICENSE"

[features]
default = []
test_utils = [ "tempfile" ]
instrumentation = ["serde_derive", "gotham", "mime", "gotham_derive", "prometheus", "hyper", "num_cpus", "reqwest", "http" ]
network_dump = []
static = [ ]
profiling = [ "static" ]
collector = [ "reqwest/default-tls", "serde/derive", "rmp-serde", "gotham", "mime", "gotham_derive", "hyper", "futures" ]
database_emitter = []
genesis_tester = [ "tempfile" ]

[profile.release]
codegen-units = 1

[dependencies]
# Internal dependencies
crypto_common = { path = "../concordium-base/rust-src/crypto_common", features = ["encryption"] }

# External dependencies
parking_lot = "0.11"
structopt = "0.3"
rand = "0.7"
ed25519-dalek = "1.0.1"
mio = { version = "0.7", features = ["os-poll", "tcp"] }
log = "0.4"
env_logger = "0.8.3"
byteorder = "1.3"
preferences = "1.1"
app_dirs2 = "2.3"
chrono = "0.4"
cfg-if = "1.0.0"
base64 = "0.13.0"
rkv = "0.17.0"
circular-queue = "0.2"
digest = "0.9"
twox-hash = { version = "^1.5.0", features = ["digest"] }
nohash-hasher = "0.2"
rayon = "1.4"
noiseexplorer_xx = { path = "../deps/external/noiseexplorer_xx" }
bytesize = "1.0"
crossbeam-channel = "0.4"
semver = { version = "0.11.0", features = ["serde"] }
ctrlc = "3.1"
signal-hook = "0.1"
flatbuffers = { version = "0.7.0" } # Must be updated when we update Rust version.
flatc-rust = { version = "0.2.0" }
sha2 = "0.9"
lazy_static = "^1.2"
base58check = "^0.1"
serde = { version = "1.0", features = ["rc"] }
hex = "0.4"
rpassword = "5.0"
anyhow = "1.0"
thiserror = "1.0"

# gRPC dependencies
tonic = "0.4.1"
prost = "0.7.0"
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }

# Feature-gated dependencies
gotham = { version = "0.6", optional = true }
gotham_derive = { version = "0.6", optional = true }
http = { version = "0.2", optional = true }
hyper = { version = "=0.14.4", optional = true } # 0.14.5 depends on socket2 0.4 which is not supported on 1.45.2 rustc
reqwest = { version = "0.11.2", default-features = false, optional = true, features = ["default-tls", "stream", "json"] }
mime = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }
serde_derive = { version = "1.0", optional = true }
rmp-serde = { version = "0.15.4", optional = true }
serde_json = { version = "1" }
num_cpus = { version = "1.13", optional = true }
jsonwebtoken = { version = "7", optional = true }
prometheus = { version = "0.12.0", default-features = false, features = ["gen", "push", "protobuf"], optional = true }
tempfile = { version = "3.1", optional = true }

[target.'cfg(windows)'.dependencies]
ipconfig = { version = "0.2" }
libc = "0.2"

[target.'cfg(unix)'.dependencies]
get_if_addrs = { version = "0.5" }
uuid = { version = "0.8", default-features = false, optional = true }
libc = "0.2"

[build-dependencies]
tonic-build = { version = "0.4.1", default-features = false, features = ["transport", "prost"] }
flatc-rust = "0.2.0"
walkdir = "2"

[dev-dependencies]
criterion = "0.3"
quickcheck = "^0.9"
futures = "0.3"
itertools = "0.10.0"
tempfile = "3.1"

[lib]
path = "src/lib.rs"
name = "concordium_node"

[[bin]]
path = "src/bin/cli.rs"
name = "concordium-node"

[[bin]]
path = "src/bin/bootstrapper.rs"
name = "p2p_bootstrapper-cli"

[[bin]]
path = "src/bin/dnsrecordgen.rs"
name = "dns_record_generator"

[[bin]]
path = "src/bin/genkey.rs"
name = "dns_key_generator"

[[bin]]
name = "node-collector"
path = "src/bin/collector.rs"
required-features = [ "collector" ]

[[bin]]
name = "node-collector-backend"
path = "src/bin/collector_backend.rs"
required-features = [ "collector" ]

[[bin]]
name = "network_stress_test"
path = "src/bin/network_stress_test.rs"
required-features = [ "test_utils" ]

[[bin]]
name = "bootstrap_checker"
path = "src/bin/bootstrap_checker.rs"

[[bin]]
name = "database_emitter"
path = "src/bin/database_emitter.rs"
required-features = [ "database_emitter" ]

[[bin]]
name = "genesis_tester"
path = "src/bin/genesis_tester.rs"
required-features = [ "genesis_tester" ]

[[bench]]
name = "p2p_lib_benchmark"
required-features = [ "test_utils" ]
harness = false
