[package]
name = "concordium_node"
version = "5.2.4" # must be kept in sync with 'is_compatible_version' in 'src/configuration.rs'
description = "Concordium Node"
authors = ["Concordium <developers@concordium.com>"]
exclude = [".gitignore", ".gitlab-ci.yml", "test/**/*","**/**/.gitignore","**/**/.gitlab-ci.yml"]
publish = false
build = "build.rs"
autobins = false
edition = "2018"
default-run = "concordium-node"
license-file = "../LICENSE"

[features]
default = []
test_utils = [ ]
network_dump = []
static = [ ]
profiling = [ "static" ]
collector = [ "reqwest/default-tls", "serde/derive", "rmp-serde", "collector-backend" ]

[profile.release]
codegen-units = 1

[dependencies]
# Internal dependencies
concordium_base = { path = "../concordium-base/rust-src/concordium_base", features = ["encryption"] }
concordium-smart-contract-engine = { path = "../concordium-base/smart-contracts/wasm-chain-integration" }

# External dependencies
structopt = "0.3"
rand = "0.7"
mio = { version = "0.7", features = ["os-poll", "tcp"] }
log = "0.4"
env_logger = "0.8.3"
log4rs = { version = "1.2", features = ["all_components", "config_parsing", "toml_format", "yaml_format", "gzip"] }
toml = "0.5"
byteorder = "1.3"
preferences = "1.1"
app_dirs2 = "2.3"
chrono = "0.4"
cfg-if = "1.0.0"
base64 = "0.13.0"
rkv = "0.17.0"
circular-queue = "0.2"
digest = "0.9"
twox-hash = { version = "^1.5.0", features = ["digest"] }
nohash-hasher = "0.2"
rayon = "1.5"
noiseexplorer_xx = { path = "../deps/external/noiseexplorer_xx" }
bytesize = "1.0"
crossbeam-channel = "0.5"
semver = { version = "1", features = ["serde"] }
flatbuffers = { version = "22.10.26" }
flatc-rust = { version = "0.2" }
sha2 = "0.10"
lazy_static = "^1.2"
serde = { version = "1.0", features = ["rc"] }
hex = "0.4"
rpassword = "5.0"
anyhow = "1.0"
thiserror = "1.0"
futures = { version = "0.3" }
url = "2.2"
reqwest = { version = "0.11", features = ["stream", "native-tls-vendored"] }
openssl-src = "=111.25.0" # Fix openssl-src to version 111.25 since the newer ones are not supported on Rust 1.62. Once we update rust to 1.63+ remove this.
csv = "1.1"
tokio-util = { version = "0.7.3", features = ["io"] }
libc = "0.2"
mime = { version = "0.3" }
gotham = { version = "0.6" }
gotham_derive = { version = "0.6" }
# Disable default features of prometheus to disable the unneeded protobuf encoder.
prometheus = { version = "0.13", default-features = false, features = ["push"] }
http = { version = "0.2" }
hyper = { version = "0.14" }

# gRPC dependencies
tonic = { version = "0.8", features = ["tls"] }
tonic-reflection = "0.5"
tower-http = { version = "0.4", features = ["trace", "metrics"] }
tower = "0.4"
tonic-web = "0.4"
prost = "0.11"
tokio = { version = "1.20", features = ["macros", "rt-multi-thread", "signal", "io-util", "time"] }
tokio-stream = "0.1"


# Feature-gated dependencies
rmp-serde = { version = "0.15", optional = true }
serde_json = { version = "1" }
tempfile = { version = "3.1" }

collector-backend = { version = "*", path = "../collector-backend/", optional = true }

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1.0"

[target.'cfg(windows)'.dependencies]
ipconfig = { version = "0.2" }

[target.'cfg(unix)'.dependencies]
get_if_addrs = { version = "0.5" }

[build-dependencies]
tonic-build = { version = "0.8", default-features = false, features = ["transport", "prost"] }
prost-build = "0.11"
flatc-rust = "0.2.0"
walkdir = "2"

[dev-dependencies]
criterion = "0.3"
quickcheck = "1"
futures = "0.3"
itertools = "0.10.0"
tempfile = "3.1"

[lib]
path = "src/lib.rs"
name = "concordium_node"

[[bin]]
path = "src/bin/cli.rs"
name = "concordium-node"

[[bin]]
path = "src/bin/bootstrapper.rs"
name = "p2p_bootstrapper-cli"

[[bin]]
name = "node-collector"
path = "src/bin/collector.rs"
required-features = [ "collector" ]

[[bin]]
name = "bootstrap_checker"
path = "src/bin/bootstrap_checker.rs"

[[bench]]
name = "p2p_lib_benchmark"
required-features = [ "test_utils" ]
harness = false
