[package]
name = "macos_logger_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {version = "0.4", features = ["std"]}

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1.0"
