[package]
name = "plt-scheduler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
ffi = ["dep:libc"]

[dependencies]
concordium_base = {path = "../concordium-base/rust-src/concordium_base"}
plt-deployment-unit = {path = "../plt-deployment-unit"}
derive_more = { version = "2.1.0", features = ["into", "from"] }
libc = { version = "0.2", optional = true }
