[workspace]
resolver = "3"

members = [
    "plt-types",
    "plt-scheduler-interface",
    "plt-scheduler",
    "plt-token-module"
]

[workspace.dependencies]
plt-token-module = {path = "plt-token-module"}
plt-types = {path = "plt-types"}
plt-scheduler-interface = {path = "plt-scheduler-interface"}

concordium_base = {path = "../concordium-base/rust-src/concordium_base"}

assert_matches = "1.5.0"
hex = "0.4.3"
libc = "0.2.178"
proptest = "1.9.0"
thiserror = "2.0.17"
