[workspace]
resolver = "3"

members = [
    "plt-block-state",
    "plt-scheduler-types",
    "plt-scheduler-interface",
    "plt-scheduler",
    "plt-token-module"
]

[workspace.dependencies]
plt-block-state = {path = "plt-block-state"}
plt-token-module = {path = "plt-token-module"}
plt-scheduler-types = {path = "plt-scheduler-types"}
plt-scheduler-interface = {path = "plt-scheduler-interface"}

concordium_base = {path = "../concordium-base/rust-src/concordium_base"}

assert_matches = "1.5.0"
hex = "0.4.3"
libc = "0.2.178"
proptest = "1.9.0"
sha2 = "0.10.9"
thiserror = "2.0.17"
