[workspace]
resolver = "3"

members = [
    "node-rust-library",
    "plt-block-state",
    "plt-scheduler-types",
    "plt-scheduler-interface",
    "plt-scheduler",
    "plt-token-module"
]

# Optimize a good as possible with fat linking and a single code generation unit
[profile.release]
lto = "fat"
codegen-units = 1

[workspace.dependencies]
plt-block-state = {path = "plt-block-state"}
plt-token-module = {path = "plt-token-module"}
plt-scheduler = {path = "plt-scheduler"}
plt-scheduler-types = {path = "plt-scheduler-types"}
plt-scheduler-interface = {path = "plt-scheduler-interface"}

concordium_base = {path = "../concordium-base/rust-src/concordium_base"}
concordium-smart-contract-engine = {path = "../concordium-base/smart-contracts/wasm-chain-integration"}

assert_matches = "1.5.0"
either = "1.15.0"
hex = "0.4.3"
im = "15.1.0"
libc = "0.2.178"
proptest = "1.9.0"
sha2 = "0.10.9"
thiserror = "2.0.17"
