[package]
name = "concordium-common"
version = "0.0.1"
description = "Concordium Common library"
authors = ["Concordium AG <info@concordium.com>"]
exclude = [".gitignore", ".gitlab-ci.yml", "test/**/*"]
publish = false
autobins = false
edition = "2018"

[features]
default = []
valgrind = []
s11n_serde = ["serde", "serde_derive"]

[dependencies]
byteorder = "^1.3.2"
circular-queue = "^0.2"
failure = "^0.1.5"
tempfile = "^3.0.7"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_cbor = { version = "0.9.0", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
static_assertions = "^0.3"
criterion = "0.2"
rand = "^0.6"

[lib]
path = "src/lib.rs"
name = "concordium_common"

[[bench]]
name = "lib_benchmark"
harness = false
