[package]
name = "concordium-common"
version = "0.1.55"
description = "Concordium Common library"
authors = ["Concordium AG <info@concordium.com>"]
exclude = [".gitignore", ".gitlab-ci.yml", "test/**/*"]
publish = false
autobins = false
edition = "2018"
license = "MIT"

[features]
default = []
valgrind = []
s11n_serde = ["serde", "serde_derive"]
instrumentation = ["gotham", "gotham_derive", "prometheus", "reqwest", "serde", "serde_derive", "hyper", "mime", "tokio", "num_cpus"]

[dependencies]
byteorder = "^1.3.2"
circular-queue = "^0.2"
failure = "^0.1.5"
hash_hasher = "^2.0"
tempfile = "^3.0.7"
rkv = "^0.9"
log = "0.4"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_cbor = { version = "0.9.0", optional = true }
cfg-if = "0.1"
gotham = { version = "0.3", optional = true }
gotham_derive = { version = "0.3", optional = true }
reqwest = { version = "^0.9", default-features = false, optional = true }
hyper = { version = "0.12", optional = true }
mime = { version = "0.3", optional = true }
num_cpus = { version = "1.10.0", optional = true }
tokio = { version = "0.1.19", optional = true }

[dev-dependencies]
static_assertions = "^0.3"
criterion = "0.2"
rand = "^0.6"

[lib]
path = "src/lib.rs"
name = "concordium_common"

[dependencies.prometheus]
git = "https://github.com/pingcap/rust-prometheus.git"
default-features = false
features = ["gen", "push", "protobuf"]
optional = true
