[package]
name = "concordium-common"
version = "0.1.67"
description = "Concordium Common library"
authors = ["Concordium AG <info@concordium.com>"]
exclude = [".gitignore", ".gitlab-ci.yml", "test/**/*"]
publish = false
autobins = false
edition = "2018"
license = "MIT"

[features]
default = []
valgrind = []
s11n_serde = ["serde", "serde_derive"]

[dependencies]
byteorder = "^1.3.2"
circular-queue = "^0.2"
failure = "^0.1.5"
hash_hasher = "^2.0"
tempfile = "^3.0.7"
rkv = "^0.9"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_cbor = { version = "0.9.0", optional = true }
base58check = "^0.1"
sha2 = "0.8.0"
digest = "0.8.0"
base58 = "^0.1"

[dev-dependencies]
static_assertions = "^0.3"
criterion = "0.2"
rand = "^0.6"

[lib]
path = "src/lib.rs"
name = "concordium_common"
