[package]
name = "concordium-dns"
version = "0.0.1"
description = "concordium libunbound dns module"
build = "build.rs"
authors = ["Concordium AG <info@concordium.com>"]
exclude = [".gitignore", ".gitlab-ci.yml", "test/**/*"]
publish = false
edition = "2018"

[features]
default = []
valgrind = []

[dependencies]
log = "0.4"
#openssl = "0.10"
libc = "0.2"
failure = "^0.1.5"

[build-dependencies]
tempdir = "0.3.7"
cc = "1.0.35"
