[package]
name = "concordium-global-state-sys"
version = "0.0.1"
description = "global state FFI bindings"
authors = ["Concordium AG <info@concordium.com>"]
exclude = [".gitignore", ".gitlab-ci.yml", "test/**/*"]
publish = false
autobins = false
edition = "2018"

[dependencies]
concordium-global-state = { path = "../concordium-global-state" }
libc = "^0.2"

[lib]
crate-type = ["cdylib"]
