[package]
name = "concordium-global-state"
version = "0.0.1"
description = "global state prototype"
authors = ["Concordium AG <info@concordium.com>"]
exclude = [".gitignore", ".gitlab-ci.yml", "test/**/*"]
publish = false
autobins = false
edition = "2018"

[features]
default = []
valgrind = []

[dependencies]
base58 = "^0.1.0"
chrono = "0.4.0"
circular-queue = "0.2.0"
concordium-common = { path = "../concordium-common" }
ec_vrf_ed25519_sha256 = { path = "../deps/internal/crypto/rust-src/ec_vrf_ed25519_sha256" }
eddsa_ed25519 = { path = "../deps/internal/crypto/rust-src/eddsa_ed25519" }
log = "0.4"
byteorder = "^1.3.2"
failure = "^0.1.5"
digest = "0.8.0"
rkv = "^0.9"
sha2 = "0.8.0"
