[package]
name = "consensus-sys"
version = "0.0.1"
description = "consensus prototype wrapper"
authors = [ "Ian Johannesen <ij@concordium.com>", "Martin Karlsen Jensen <mkj@concordium.com>"]
exclude = [
    ".gitignore",
    ".gitlab-ci.yml",
    "test/**/*"
]
publish = false
build = "build.rs"

[features]
default = []
valgrind = []

[dependencies]
libc = "0.2"
log = "0.4"
lazy_static = "1.1.0"
byteorder = "1"

[target.'cfg(windows)'.dependencies]
curryrswin = { path = "../deps/windows/curryrs", features = ["threaded"], package = "curryrs" }

[target.'cfg(unix)'.dependencies]
curryrsunix = { version = "^0.2.0", features = ["threaded"], package  = "curryrs" }

[build-dependencies]
bindgen = "0.43.1"
