[package]
name = "dns"
version = "0.0.1"
description = "dns module"
authors = ["Concordium AG <info@concordium.com>"]
exclude = [".gitignore", ".gitlab-ci.yml", "test/**/*"]
publish = false
edition = "2018"

[features]
default = []
valgrind = []

[dependencies]
unbound = { path = "../deps/generic/unbound-0.6.0" }
log = "0.4"
