[package]
name = "ldns-sys"
version = "0.0.1"
description = "ldns wrapper"
authors = [ "Ian Johannesen <ij@concordium.com>", "Martin Karlsen Jensen <mkj@concordium.com>"]
exclude = [
    ".gitignore",
    ".gitlab-ci.yml",
    "test/**/*"
]
publish = false
build = "build.rs"

[features]
default = []
valgrind = []

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.38.0"
