[package]
name = "node-rust-library"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Include the Rust scheduler and the smart contract engine/wasm chain integration in the library
plt-scheduler.workspace = true
concordium-smart-contract-engine = { features = ["enable-ffi"], workspace = true }


