[package]
name = "plt-block-state"
version = "0.1.0"
edition = "2024"

[features]
default = ["ffi"]
ffi = ["dep:libc"]

[dependencies]
# Workspace dependencies
plt-scheduler-types.workspace = true

# Concordium dependencies
concordium_base.workspace = true
concordium-smart-contract-engine.workspace = true

# Third party dependencies
assert_matches.workspace = true
either.workspace = true
hex.workspace = true
im.workspace = true
libc = { workspace = true, optional = true }
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
hex.workspace = true