[package]
name = "plt-block-state"
version = "0.1.0"
edition = "2024"

[features]
default = ["ffi"]
ffi = ["dep:libc"]

[dependencies]
# Workspace dependencies
plt-scheduler-types.workspace = true

# Concordium dependencies
concordium_base.workspace = true

# Third party dependencies
assert_matches.workspace = true
either.workspace = true
hex.workspace = true
im.workspace = true
libc = { workspace = true, optional = true }
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
divan.workspace = true
hex.workspace = true
rand.workspace = true

[[bench]]
name = "lfmb_tree"
harness = false

[[bench]]
name = "hashed_cacheable_reference"
harness = false
