[package]
name = "plt-scheduler"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["ffi"]
ffi = ["dep:libc"]

[dependencies]
# Workspace dependencies
plt-block-state.workspace = true
plt-scheduler-types.workspace = true
plt-scheduler-interface.workspace = true
plt-token-module.workspace = true

# Concordium dependencies
concordium_base.workspace = true

# Third party dependencies
thiserror.workspace = true
libc = { workspace = true, optional = true }

[dev-dependencies]
assert_matches.workspace = true
hex.workspace = true