[package]
name = "plt-scheduler"
version = "0.1.0"
edition = "2024"

[features]
default = ["ffi"]
ffi = ["dep:libc"]

[dependencies]
plt-block-state.workspace = true
plt-scheduler-types.workspace = true

concordium_base.workspace = true
thiserror.workspace = true
libc = { workspace = true, optional = true }

[dev-dependencies]
assert_matches.workspace = true
hex.workspace = true
