[package]
name = "plt-token-module"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# Workspace dependencies
plt-block-state.workspace = true
plt-scheduler-types.workspace = true
plt-scheduler-interface.workspace = true

# Concordium dependencies
concordium_base.workspace = true

# Third party dependencies
thiserror.workspace = true

[dev-dependencies]
assert_matches.workspace = true
