[package]
name = "service-runner-win"
version = "0.1.0"
authors = ["Concordium <developers@concordium.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
atomic_ref = "0.2"
log = "0.4"
retain_mut = "0.1"
tempfile = "3.2"
toml = "0.5"
winapi = { version="0.3.9", features=["wincon", "consoleapi"] }
windows-service = "0.3.1"
winlog = { version="0.2" }
winreg = "0.9"
